--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "firebase": "^10.13.2",
+    "jspdf": "^2.5.2",
     "pinia": "^2.1.7",
     "pizzeria-paca": "file:",
     "vue": "^3.4.29",
