--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formkit/drag-and-drop": "^0.1.6",
+    "@stripe/stripe-js": "^4.8.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "jspdf": "^2.5.2",
